2016-03-29 David Hohn <david.hohn@cern.ch>
	* add 2nd flat tau, add flat tau E
	* add all vertices as vector branches and primary vertex also flat
	* add d0, z0, vz, deltaz0 for flat leptons and vector leptons
	* deltaz0 and deltaz0sintheta are signed again
	* overwrite Count histogram content if running skimmed MC with sumWeights info
	* tag ttHMultiAna-00-01-06

2016-03-28 David Hohn <david.hohn@cern.ch>
	* update JVT cut to use detector eta
	* save all jets. get them calibrated by AnalysisTop from TStore
	* add function to TreeAssist to selectively push into the Wrappers

2016-03-23 Harish Potti <harish.potti@utexas.edu>
	* Add Xsection for Low-mass Z+Jets

2016-03-18 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Include background flags
	* Tag ttHMultiAna-00-01-05

2016-03-18 Harish Potti <harish.potti@cern.ch>
	* migrate scripts to Top,2.3.45a

2016-03-18 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Update to run with AT,2.3.45a
	* Include new JVT cut (and jet pT cut) and JVT SFs (nominal and variations)

2016-03-01 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Change EventNumber and RunNumber variable type to unsigned long long and uint32_t
	* Tag ttHMultiAna-00-01-04

2016-02-22 David Hohn
	* HF classification for ttbar dilep, doesnt work with current derivations (p2501)
	* tag ttHMultiAna-00-01-03

2016-02-21 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* HF classification

2016-02-16 Peter Onyisi
	* Add Sherpa ttV

2016-02-14 Harish Potti <harish.potti@cern.ch>
	* Add triboson samples to xsection file
2016-01-27 Harish Potti <harish.potti@cern.ch>
	* update k-factor for ttV
2016-01-26 David Hohn <david.hohn@cern.ch>
	* fix NaN SFs
	* add nJet without tau OR
	* move to Top,2.3.41
	* tag ttHMultiAna-00-01-02

2016-01-22 Peter Onyisi
	* Fix crash on more than five leptons

2016-01-22 David Hohn <david.hohn@cern.ch>
	* added lep_EtaBE2_*
	* migrate to Top,2.3.40
